<resources>
    <string name="app_name">Video Downloader App</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="vimeo">Vimeo</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="twitter">Twitter</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="removeads">Remove Ads</string>
    <string name="howtodownload">How to download</string>
    <string name="feedbackorquestion">Got feedback or questions? Tell us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottomsheetbtn1">270p</string>
    <string name="bottomsheetbtn2">240p</string>
    <string name="bottomsheetbtn3">360p</string>
    <string name="bottomsheetbtn4">480p</string>
    <string name="bottomsheetbtn5">mp3</string>
    <string name="bottomsheetsize1">Size 1</string>
    <string name="bottomsheetcancelbtn">Cancel</string>
    <string name="bottomsheetrenamebtn">Rename</string>
    <string name="bottomsheetdownloadbtn">Download</string>
    <string name="filenametextv">File Name</string>
    <string name="percentagedownloadtextv">Percentage</string>
    <string name="videoTitle">Video Title</string>
    <string name="belowvideotitile">Below Video title</string>
    <string name="downloadbtn">Download</string>
    <string name="progress_text">Progress</string>
    <string name="sizeofdownloads">MB</string>
    <string name="layouthistorytext">Link</string>
    <string name="historytext">History</string>
    <string name="bookmarkstext">Book marks</string>
    <string name="splashscreentext1">Our high-speed download engine ensures</string>
    <string name="splashscreentext2">quick and efficient video saving.</string>
    <string name="splashbuttontext">Next</string>
    <string name="privacypolicytext1"><![CDATA[By clicking the <b>ACCEPT</b> button, you are confirming your agreement with our privacy policy and the terms and conditions governing the use of our app, Your data may be collected, processed, and stored in accordance with our Privacy Policy.]]></string>
    <string name="privacypolicytext2">For more information, please visit our <privacy_policy_link>Privacy Policy</privacy_policy_link>, Please carefully read and understand the terms and conditions of our app usage. By accepting, you agree to abide by them. </string>
    <string name="acceptbutton">Accept</string>
    <string name="cancelbtn">Cancel</string>
    <string name="buynowbutton">Buy Now</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_id">ca-app-pub-3940256099942544/1044960115</string>
    <string name="Interstisial_id_splash">ca-app-pub-3940256099942544/1033173712</string>


</resources>